Correct fix for scrollbar jitter

--- a/app/sludge.css
+++ b/app/sludge.css
@@ -46,6 +46,12 @@ label {
 	flex: 1;
 }
 
+.transactionTab {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
 .transactionAmount {
 	text-align: right;
 }
